Prevent carousel items overflowing
This only prevents the items overflowing if something goes wrong with
the width calculations for #main_cluster_scroll

--- a/css/enhancedsteam.css
+++ b/css/enhancedsteam.css
@@ -1126,7 +1126,9 @@ input[type=checkbox].es_dlc_selection:checked + label {
 	position: relative;
 	height: 353px;
 }
-
+.es_carousel_desc {
+	max-height: 459px;
+}
 /***************************************
  * Steam inventory
  * inventory_market_helper()
